src/objects/Project__c.object
<CustomObject>
    <description>Object to manage tenders and bespoke projects</description>
    <fields>
        <fullName>Account_Owner__c</fullName>
        <formula>Account__r.Area__r.Territory_Owner__c</formula>
        <inlineHelpText>NOTE: May be issues with Accounts manually excluded from assignment rules not displaying correctly - remind us later to check this</inlineHelpText>
        <label>Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BSC_Business_Development_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the person managing the project (for Culture Change)</description>
        <inlineHelpText>This is the person managing the project</inlineHelpText>
        <label>BSC Business Development Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Projects4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client_Project_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Project Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Projects (Client Contact)</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client_Purchasing_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Purchasing Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Projects (Client Purchasing Contact)</relationshipLabel>
        <relationshipName>Projects1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client_Sector__c</fullName>
        <label>Client Sector</label>
        <picklist>
            <picklistValues>
                <fullName>Public</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contract_Won_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract Won By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Projects3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Won_By_if_not_BSC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If the Contract was lost to another competitor enter the account name if known</description>
        <inlineHelpText>If the Contract was lost to another competitor enter the account name if known</inlineHelpText>
        <label>Contract Won By (if not BSC)</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Projects (Contract Won By (if not BSC))</relationshipLabel>
        <relationshipName>Projects1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Proposal_Value__c</fullName>
        <label>Current Proposal Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Project_Value__c</fullName>
        <description>This is used to enter the overall estimated value of the project (created for culture change)</description>
        <inlineHelpText>This is used to enter the overall estimated value of the project</inlineHelpText>
        <label>Estimated Project Value</label>
        <picklist>
            <picklistValues>
                <fullName>&lt; £10,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>£10,000 - £20,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>£20,000 - £50,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>£50,000 - £100,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>£100,000 - £250,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>£250,000 - £500,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt; £500,000</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>JOMC_Delivery_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is to replace the Signatory field which was a lookup to user, but needed to be to the contact.</description>
        <label>JOMC Delivery Lead</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Projects (JOMC Delivery Lead)</relationshipLabel>
        <relationshipName>Projects2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lost_Reason__c</fullName>
        <label>Lost Reason</label>
        <picklist>
            <controllingField>Status__c</controllingField>
            <picklistValues>
                <fullName>Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitive Offering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inadequate References</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resource Availability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resource Competence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industry Experience</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lost__c</fullName>
        <label>Lost Stage</label>
        <picklist>
            <controllingField>Status__c</controllingField>
            <picklistValues>
                <fullName>Lost @ Initial Proposal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost @ PQQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost @ Final Proposal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost @ Bid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost @ Further Requirements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost @ Negotiation of Terms</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunities_open_total__c</fullName>
        <description>Total value of all open opportunities related to this project</description>
        <inlineHelpText>This value includes all expenses and additional costs</inlineHelpText>
        <label>Opportunities open total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunities_won_total__c</fullName>
        <description>Total value of all won opportunities related to this project</description>
        <inlineHelpText>This value includes all expenses and additional costs</inlineHelpText>
        <label>Opportunities won total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Director</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Projects1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Office_Engaged__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Project Office Engaged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project_Reference__c</fullName>
        <description>Project reference Auto number</description>
        <displayFormat>P-{00000}</displayFormat>
        <label>Project Reference</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Project_Requirements__c</fullName>
        <label>Project Requirements</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Signatory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Signatory</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Standard_T_Cs__c</fullName>
        <label>Standard T&amp;Cs</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Viability Review</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Initial Proposal Preparation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PQQ Preparation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Initial Proposal Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PQQ Submission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Negotiation of Initial Proposal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Final Proposal Preparation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bid Preparation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Final Proposal Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bid Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Negotiaion of Final Proposal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Further Requirements Preparation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Further Requirements Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Awarded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Qualified Out</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Qualifying</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Positioning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Initial Proposal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Final Proposal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Negotiating Terms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pilot/Taster Session Booked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Ongoing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Withdrawn by BSC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Withdrawn by Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>T_C_Amendements__c</fullName>
        <description>To be entered if the Standard T&amp;C&apos;s value = No (for Culture Change)</description>
        <inlineHelpText>To be entered if the Standard T&amp;C&apos;s value = No (for Culture Change)</inlineHelpText>
        <label>T&amp;C Amendments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Technical_Project_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Technical Project Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Projects2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Open - Framework/Call Off</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <description>Roll up of opportunity values</description>
        <inlineHelpText>Total value of related opportunities</inlineHelpText>
        <label>Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Project</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Status__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Opportunities_open_total__c</columns>
        <columns>Opportunities_won_total__c</columns>
        <columns>Current_Proposal_Value__c</columns>
        <columns>Account_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Projects</label>
        <sharedTo>
            <role>CommercialDirector</role>
            <role>HeadofSales</role>
            <role>Sales_Manager_KAM</role>
            <role>Sales_Manager_RAM</role>
            <role>Sales_Team_International</role>
            <role>Sales_Team_KAM</role>
            <role>Sales_Team_RAM</role>
            <role>SystemAdministrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Culture_Change_Projects_Lost_On_hold</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Status__c</columns>
        <columns>Estimated_Project_Value__c</columns>
        <columns>Opportunities_open_total__c</columns>
        <columns>Opportunities_won_total__c</columns>
        <columns>Account_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Project__c.Culture_Change</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Project Complete,Lost,Withdrawn by BSC,Withdrawn by Client</value>
        </filters>
        <label>Culture Change Projects (Lost/Complete)</label>
    </listViews>
    <listViews>
        <fullName>Culture_Change_Projects_open</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Status__c</columns>
        <columns>Estimated_Project_Value__c</columns>
        <columns>Opportunities_open_total__c</columns>
        <columns>Opportunities_won_total__c</columns>
        <columns>Account_Owner__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Project__c.Culture_Change</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Project Complete,Lost,Withdrawn by BSC,Withdrawn by Client</value>
        </filters>
        <label>Culture Change Projects (Open)</label>
        <sharedTo>
            <role>CommercialDirector</role>
            <role>HeadofSales</role>
            <role>ProductDevelopment</role>
            <role>Sales_Manager_KAM</role>
            <role>Sales_Manager_RAM</role>
            <role>Sales_Team_International</role>
            <role>Sales_Team_KAM</role>
            <role>Sales_Team_RAM</role>
            <role>SystemAdministrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Culture_Change_Projects</fullName>
        <columns>NAME</columns>
        <columns>Account_Owner__c</columns>
        <columns>Status__c</columns>
        <columns>Estimated_Project_Value__c</columns>
        <columns>Opportunities_open_total__c</columns>
        <columns>Opportunities_won_total__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Project__c.Culture_Change</value>
        </filters>
        <label>My Culture Change Projects</label>
    </listViews>
    <listViews>
        <fullName>Won_Bids_Tenders</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Status__c</columns>
        <columns>Account_Owner__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Project__c.Bid_Tender</value>
        </filters>
        <label>Bids &amp; Tenders</label>
        <sharedTo>
            <role>CommercialDirector</role>
            <role>HeadofSales</role>
            <role>ProductDevelopment</role>
            <role>Sales_Manager_KAM</role>
            <role>Sales_Manager_RAM</role>
            <role>Sales_Team_International</role>
            <role>Sales_Team_KAM</role>
            <role>Sales_Team_RAM</role>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <recordTypes>
        <fullName>Bid_Tender</fullName>
        <active>true</active>
        <label>Bid / Tender</label>
    </recordTypes>
    <recordTypes>
        <fullName>Culture_Change</fullName>
        <active>true</active>
        <label>Culture Change</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard</fullName>
        <active>true</active>
        <label>Standard</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Mandatory_if_Final_Proposal</fullName>
        <active>true</active>
        <description>Where the Status of the project is from the value &quot;Final Proposal&quot; then make this field mandatory.</description>
        <errorConditionFormula>AND(
OR (
ISPICKVAL(Status__c, &quot;Final Proposal&quot;),
ISPICKVAL(Status__c, &quot;Negotiating Terms&quot;),
ISPICKVAL(Status__c, &quot;Pilot/Taster Session Booked&quot;),
ISPICKVAL(Status__c, &quot;Project Ongoing&quot;), 
ISPICKVAL(Status__c, &quot;Project Complete&quot;)),
ISPICKVAL(Standard_T_Cs__c,&quot;&quot;))</errorConditionFormula>
        <errorDisplayField>Standard_T_Cs__c</errorDisplayField>
        <errorMessage>Please enter a Standard T&amp;Cs</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mandatory_if_Initia_Proposal_Bus_Dev_Mgr</fullName>
        <active>true</active>
        <description>If the Status is from Final Proposal, this field should be mandatory</description>
        <errorConditionFormula>AND(
OR (
ISPICKVAL(Status__c, &quot;Initial Proposal&quot;),
ISPICKVAL(Status__c, &quot;Final Proposal&quot;),
ISPICKVAL(Status__c, &quot;Negotiating Terms&quot;),
ISPICKVAL(Status__c, &quot;Pilot/Taster Session Booked&quot;),
ISPICKVAL(Status__c, &quot;Project Ongoing&quot;),
ISPICKVAL(Status__c, &quot;Project Complete&quot;)),
ISBLANK( BSC_Business_Development_Manager__c ))</errorConditionFormula>
        <errorDisplayField>BSC_Business_Development_Manager__c</errorDisplayField>
        <errorMessage>Please select the BSC Business Development Manager</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mandatory_if_Initia_Proposal_JOMC_Del_Ld</fullName>
        <active>true</active>
        <description>If the Status is from Initial Proposal, this field should be mandatory</description>
        <errorConditionFormula>AND(
OR (
ISPICKVAL(Status__c, &quot;Initial Proposal&quot;),
ISPICKVAL(Status__c, &quot;Final Proposal&quot;),
ISPICKVAL(Status__c, &quot;Negotiating Terms&quot;),
ISPICKVAL(Status__c, &quot;Pilot/Taster Session Booked&quot;),
ISPICKVAL(Status__c, &quot;Project Ongoing&quot;),
ISPICKVAL(Status__c, &quot;Project Complete&quot;)),
 ISBLANK(JOMC_Delivery_Lead__c))</errorConditionFormula>
        <errorDisplayField>JOMC_Delivery_Lead__c</errorDisplayField>
        <errorMessage>Please select the JOMC Delivery Lead</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mandatory_if_Standard_T_C_is_No</fullName>
        <active>true</active>
        <description>If the value of Standard T&amp;Cs is No,  the T&amp;C Amendments is mandatory.</description>
        <errorConditionFormula>AND(
 ISPICKVAL( Standard_T_Cs__c , &quot;No&quot;) ,
 T_C_Amendements__c =&quot;&quot;)</errorConditionFormula>
        <errorDisplayField>T_C_Amendements__c</errorDisplayField>
        <errorMessage>If the value of Standard T&amp;Cs is No, please enter the T&amp;C Amendments</errorMessage>
    </validationRules>
</CustomObject>